Modified pom dependencies, GoogleCalendarConfig.java, application.yaml